--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -4,7 +4,7 @@
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
 # Website name
-title: Khang T. Huynh 
+title: Khang Huynh 
 # Website URL
 baseURL: 'https://tkhangg0910.github.io/'
 
