--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -4,10 +4,13 @@ env:
   WC_HUGO_VERSION: '0.136.5'
 
 on:
+  # Trigger the workflow every time you push to the main branch
   push:
     branches: ["main"]
+  # Allows you to run this workflow manually from the Actions tab on GitHub.
   workflow_dispatch:
 
+# Provide permission to clone the repo and deploy it to GitHub Pages
 permissions:
   contents: read
   pages: write
@@ -18,6 +21,7 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
+  # Build website
   build:
     if: github.repository_owner != 'HugoBlox'
     runs-on: ubuntu-latest
@@ -25,6 +29,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v4
       with:
+          # Fetch history for Hugo's .GitInfo and .Lastmod
         fetch-depth: 0
     - name: Setup Hugo
       uses: peaceiris/actions-hugo@v2
@@ -44,6 +49,7 @@ jobs:
       env:
         HUGO_ENVIRONMENT: production
       run: |
+        echo "Hugo Cache Dir: $(hugo config | grep cachedir)"
         hugo --minify --baseURL "${{ steps.pages.outputs.base_url }}/"
     - name: Generate Pagefind search index
       run: npx pagefind --site "public"
@@ -52,16 +58,15 @@ jobs:
       with:
         path: ./public
 
+  # Deploy website to GitHub Pages hosting
   deploy:
     if: github.repository_owner != 'HugoBlox'
-    needs: build
-    runs-on: ubuntu-latest
     environment:
       name: github-pages
-      url: ${{ steps.deploy.outputs.page_url }}
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
     steps:
     - name: Deploy to GitHub Pages
-      id: deploy
+      id: deployment
       uses: actions/deploy-pages@v4
-      with:
-        path: ./public
